--- a/book/calculation_examples/LCA/Octatube_comparison.ipynb
+++ b/book/calculation_examples/LCA/Octatube_comparison.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simplified LCA tool"
+    "# Simplified LCA tool: Octatube comparison"
    ]
   }
  ],
