--- a/book/calculation_examples/LCA/steel_comparison.ipynb
+++ b/book/calculation_examples/LCA/steel_comparison.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LCA comparison steel production methdods"
+    "# LCA comparison steel production methods"
    ]
   },
   {
